@@ -61,8 +61,7 @@ rtpholdtimeout character varying(3),
 secret character varying(80),
 "type" character varying DEFAULT 'friend' NOT NULL,
 username character varying(80) DEFAULT '' NOT NULL,
-disallow character varying(100) DEFAULT 'all',
-allow character varying(100) DEFAULT 'g729;ilbc;gsm;ulaw;alaw',
+allow character varying(200) DEFAULT '!all,g729,ilbc,gsm,ulaw,alaw',
 musiconhold character varying(100),
 regseconds bigint DEFAULT 0::bigint NOT NULL,
 ipaddr character varying(40) DEFAULT '' NOT NULL,
